--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 /*  your css code here. If applicable */
 table{
 	background-color:yellow;
-	border: solid black;
+	border: 1px solid rgb(0, 0, 0);
 }
 th{
-	border: solid black;
+	border: 1px solid rgb(0, 0, 0);
 }
 td{
-	border: solid black
+	border: 1px solid rgb(0, 0, 0);
 }
